# life

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  justfile
.github/workflows/: build.yml
pkg/: package-lock.json  package.json  wasm_game_of_life.d.ts  wasm_game_of_life_bg.js  wasm_game_of_life_bg.wasm  wasm_game_of_life_bg.wasm.d.ts
pkg/www/: .travis.yml  bootstrap.js  index.html  index.js  package-lock.json  package.json
pkg/www/.bin/: create-wasm-app.js
src/: common.rs  lib.rs  life.rs
tests/: web.rs
