[package]
name    = "wasm-game-of-life"
version = "0.1.0"
authors = ["Liam <liam@scalzulli.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys       = "0.3.55"

[dependencies.console_error_panic_hook]
version  = "0.1.6"
optional = true

[dependencies.wee_alloc]
version  = "0.4.5"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
